--- a/style.css
+++ b/style.css
@@ -8,6 +8,50 @@ body {
     font-family: 'Janger', sans-serif;
 }
 
+.content {
+    list-style-type: none;
+}
+
+.content__sphere {
+    width: 150px;
+    height: 150px;
+    margin: 2em;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 50%;
+    filter: contrast(170%) brightness(1000%);
+    background: 
+      radial-gradient(circle at 144% -24%, rgb(195, 195, 232) 30%, rgba(0,0,0,0) 60%),
+      url(./noise.svg);   
+}
+
+.content__sphere:nth-of-type(2) {
+    margin-left: 40vw;
+    margin-bottom: 2vw;
+    width: 300px;
+    height: 300px;
+}
+
+.content__sphere:nth-of-type(3) {
+    margin-left: 30vw;
+    margin-bottom: 3vw;
+    width: 200px;
+    height: 200px;
+}
+
+.content__sphere:nth-of-type(4) {
+    margin-left: 5vw;
+    margin-bottom: 2vw;
+    width: 350px;
+    height: 350px;
+}
+
+.content__sphere:nth-of-type(5) {
+    margin-left: 30vw;
+    width: 250px;
+    height: 250px;
+}
+
 header {
     display: flex;
     justify-content: center;
