--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 
 body {
     background-color: #005ab1;
+    background-image: url("./assets/cyanotype.webp");
+    background-repeat: space;
     font-family: 'Janger', sans-serif;
 }
 
@@ -23,8 +25,6 @@ body {
 .content__sphere {
     width: 100%;
     height: 100%;
-    border-style: solid;
-    border-width: 2px;
     border-radius: 50%;
     filter: contrast(170%) brightness(1000%);
     background: 
