--- a/style.css
+++ b/style.css
@@ -59,6 +59,14 @@ body {
     height: 250px;
 }
 
+#frame {
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 2%;
+    width: 20vw;
+    height: 70vh;
+}
+
 .line{
     position:absolute;
     z-index: -1;
@@ -83,4 +91,9 @@ h1 {
 main { 
     display: flex;
     flex-direction: column;
+}
+
+#page-wrapper {
+    display: flex;
+    flex-direction: row;
 }
