--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body {
     list-style-type: none;
 }
 
+.content__link {
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
+
 .content__wrapper {
 	background-color: #005ab1;
 	border-radius: 50%;
@@ -59,12 +65,17 @@ body {
     height: 250px;
 }
 
-#frame {
+#frame__text {
     background-color: white;
     border: 2px solid black;
     border-radius: 2%;
     width: 20vw;
     height: 70vh;
+}
+
+#frame__image {
+    width: 30vw;
+    height: 60vh;
 }
 
 .line{
