refactor css to separate file

--- a/style.css
+++ b/style.css
@@ -5,130 +5,10 @@
 
 body {
   background-color: #005ab1;
-  background-image: url("./assets/cyanotype.webp");
+  /* background-image: url("./assets/cyanotype.webp"); */
   background-repeat: space;
   font-family: "Janger", sans-serif;
   margin: 0;
-}
-
-nav {
-  rotate: 90deg;
-  display: flex;
-  width: fit-content;
-  margin-top: -20vh;
-  align-self: center;
-}
-
-.nodes {
-  left: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-.sphere__link {
-  display: flex;
-  flex-direction: row-reverse;
-  height: 100%;
-  width: 100%;
-}
-
-.sphere__wrapper {
-  background-color: #539de3;
-  border-radius: 50%;
-  height: 60px;
-  width: 60px;
-}
-
-.node__wrapper {
-  border-top-right-radius: 4em;
-  border-bottom-right-radius: 4em;
-  display: flex;
-  flex-direction: row-reverse;
-  background-color: pink;
-  background: linear-gradient(
-      90deg,
-      rgba(253, 29, 253, 0.8) 0%,
-      rgba(252, 176, 69, 0.8) 100%
-    ),
-    url(./noise.svg);
-  transition: transform 600ms ease-in;
-  transition-delay: 150ms;
-  width: 50vw;
-  margin-bottom: 10px;
-}
-
-.node__wrapper:hover {
-  transition: transform 400ms ease-in;
-  transform: translateX(7vw);
-}
-
-li.node__wrapper:nth-of-type(2) {
-  width: 35vw;
-  rotate: 4deg;
-}
-
-li.node__wrapper:nth-of-type(2) .sphere__wrapper {
-  width: 80px;
-  height: 80px;
-}
-
-li.node__wrapper:nth-of-type(3) {
-  width: 48vw;
-}
-
-li.node__wrapper:nth-of-type(3) .sphere__wrapper {
-  width: 40px;
-  height: 40px;
-}
-
-li.node__wrapper:nth-of-type(4) {
-  width: 33vw;
-}
-
-li.node__wrapper:nth-of-type(4) .sphere__wrapper {
-  width: 20px;
-  height: 20px;
-}
-
-li.node__wrapper:nth-of-type(5) {
-  width: 48vw;
-  rotate: -2deg;
-}
-
-li.node__wrapper:nth-of-type(5) .sphere__wrapper {
-  width: 85px;
-  height: 85px;
-}
-
-li.node__wrapper:nth-of-type(6) {
-  width: 30vw;
-}
-
-li.node__wrapper:nth-of-type(6) .sphere__wrapper {
-  width: 80px;
-  height: 80px;
-}
-
-li.node__wrapper:nth-of-type(7) {
-  width: 26vw;
-}
-
-li.node__wrapper:nth-of-type(7) .sphere__wrapper {
-  width: 35px;
-  height: 35px;
-}
-
-.sphere__gradient {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  filter: contrast(170%) brightness(1000%);
-  background: radial-gradient(
-      circle at 96% -4%,
-      rgb(217, 217, 239),
-      rgba(89, 28, 255, 0)
-    ),
-    url(./noise.svg);
 }
 
 #frame__text {
