--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ body {
 
 #frame__text {
   background-color: white;
-  border: 2px solid black;
-  border-radius: 2%;
+  border: 2px solid white;
   width: 20vw;
   height: 70vh;
 }
