wip add randomly generated flowers
instead of relative position, need to be absolute but within bounds of the bed div

--- a/flowers.css
+++ b/flowers.css
@@ -1,4 +1,13 @@
+#bed {
+  display: flex;
+}
+
 .flower__content {
-    color: antiquewhite;
-    font-size: xx-large;
+  color: antiquewhite;
+  font-size: 3em;
+  margin: 0px;
+}
+
+.flower__wrapper {
+    position: relative;
 }
