--- a/nav.css
+++ b/nav.css
@@ -1,20 +1,36 @@
 nav {
-  rotate: 90deg;
   display: flex;
   width: fit-content;
-  margin-top: -20vh;
   align-self: center;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: space-between;
+  height: 100vh;
+}
+
+main {
+  overflow: clip;
+}
+
 .nodes {
+  display: flex;
+  justify-content: center;
   left: 0;
   padding: 0;
+  padding-top: 20vh;
   list-style-type: none;
+  height: 60vh;
 }
 
 .node__wrapper {
+  flex-direction: column;
+  height: 80vh;
   border-top-right-radius: 4em;
-  border-bottom-right-radius: 4em;
+  border-top-left-radius: 4em;
   display: flex;
   flex-direction: row-reverse;
   background-color: pink;
@@ -26,17 +42,15 @@ nav {
     url(./noise.svg);
   transition: transform 600ms ease-in;
   transition-delay: 150ms;
-  width: 50vw;
-  margin-bottom: 20px;
+  margin-left: 10px;
 }
 
 .node__wrapper:hover {
   transition: transform 400ms ease-in;
-  transform: translateX(7vw);
+  transform: translateY(-7vw);
 }
 
 li.node__wrapper:nth-of-type(2) {
-  width: 35vw;
   rotate: 4deg;
 }
 
@@ -45,18 +59,12 @@ li.node__wrapper:nth-of-type(2) .sphere__wrapper {
   height: 80px;
 }
 
-li.node__wrapper:nth-of-type(3) {
-  width: 48vw;
-}
 
 li.node__wrapper:nth-of-type(3) .sphere__wrapper {
   width: 40px;
   height: 40px;
 }
 
-li.node__wrapper:nth-of-type(4) {
-  width: 33vw;
-}
 
 li.node__wrapper:nth-of-type(4) .sphere__wrapper {
   width: 20px;
@@ -64,7 +72,6 @@ li.node__wrapper:nth-of-type(4) .sphere__wrapper {
 }
 
 li.node__wrapper:nth-of-type(5) {
-  width: 48vw;
   rotate: -2deg;
 }
 
@@ -73,22 +80,18 @@ li.node__wrapper:nth-of-type(5) .sphere__wrapper {
   height: 85px;
 }
 
-li.node__wrapper:nth-of-type(6) {
-  width: 30vw;
-}
-
 li.node__wrapper:nth-of-type(6) .sphere__wrapper {
   width: 80px;
   height: 80px;
 }
 
-li.node__wrapper:nth-of-type(7) {
-  width: 26vw;
-}
-
 li.node__wrapper:nth-of-type(7) .sphere__wrapper {
   width: 35px;
   height: 35px;
+}
+
+.node__title {
+  font-family: "Courier New", Courier, monospace;
 }
 
 .sphere__gradient {
@@ -106,7 +109,7 @@ li.node__wrapper:nth-of-type(7) .sphere__wrapper {
 
 .sphere__link {
   display: flex;
-  flex-direction: row-reverse;
+  justify-content: center;
   height: 100%;
   width: 100%;
 }
