--- a/nav.css
+++ b/nav.css
@@ -35,13 +35,15 @@ body {
   border-top-left-radius: 5em;
   display: flex;
   flex-direction: row-reverse;
-  background-color: pink;
-  background: linear-gradient(
+  background: url(./assets/nodes-line.svg);
+  background-size: contain;
+  background-repeat: repeat-y;
+  /* background: linear-gradient(
       90deg,
       rgba(248, 248, 248, 0.8) 0%,
       rgba(250, 246, 241, 0) 100%
     ),
-    url(./noise.svg);
+    url(./noise.svg); */
   transition: transform 900ms ease-in-out;
   transition-delay: 150ms;
   margin-left: 10px;
