--- a/nav.css
+++ b/nav.css
@@ -35,18 +35,23 @@ body {
   border-top-left-radius: 5em;
   display: flex;
   flex-direction: row-reverse;
-  background: url(./assets/nodes-line.svg);
-  background-size: contain;
-  background-repeat: repeat-y;
-  /* background: linear-gradient(
+  transition: transform 900ms ease-in-out;
+  transition-delay: 150ms;
+  margin-left: 10px;
+}
+
+.node__wave {
+  background: linear-gradient(
       90deg,
       rgba(248, 248, 248, 0.8) 0%,
       rgba(250, 246, 241, 0) 100%
     ),
-    url(./noise.svg); */
-  transition: transform 900ms ease-in-out;
-  transition-delay: 150ms;
-  margin-left: 10px;
+    url(./noise.svg);
+  clip-path: path(
+    "M 20 41 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 90 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 L 50 956 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 22 -93 A 1 1 0 0 0 20 40 Z"
+  );
+  height: 60vh;
+  width: 50px;
 }
 
 .node__wrapper:hover {
@@ -56,7 +61,8 @@ body {
 }
 
 li.node__wrapper:nth-of-type(2) {
-  rotate: 4deg;
+  margin-top: 100px;
+  rotate: -4deg;
 }
 
 li.node__wrapper:nth-of-type(2) .sphere__wrapper {
@@ -64,13 +70,28 @@ li.node__wrapper:nth-of-type(2) .sphere__wrapper {
   height: 120px;
 }
 
+li.node__wrapper:nth-of-type(2) .node__wave {
+  clip-path: path(
+    "M 30 41 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 90 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 L 100 956 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 22 -93 A 1 1 0 0 0 30 40 Z"
+  );
+  width: 105px;
+}
+
 li.node__wrapper:nth-of-type(3) {
   margin-top: 20px;
+  rotate: -5deg;
 }
 
 li.node__wrapper:nth-of-type(3) .sphere__wrapper {
   width: 140px;
   height: 140px;
+}
+
+li.node__wrapper:nth-of-type(3) .node__wave {
+  clip-path: path(
+    "M 20 41 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 90 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 L 80 956 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 22 -93 A 1 1 0 0 0 20 40 Z"
+  );
+  width: 80px;
 }
 
 li.node__wrapper:nth-of-type(4) {
@@ -82,6 +103,13 @@ li.node__wrapper:nth-of-type(4) .sphere__wrapper {
   height: 60px;
 }
 
+li.node__wrapper:nth-of-type(4) .node__wave {
+  clip-path: path(
+    "M 20 41 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 90 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 L 60 956 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 22 -93 A 1 1 0 0 0 20 40 Z"
+  );
+  width: 60px;
+}
+
 li.node__wrapper:nth-of-type(5) {
   rotate: -2deg;
 }
@@ -91,13 +119,31 @@ li.node__wrapper:nth-of-type(5) .sphere__wrapper {
   height: 85px;
 }
 
+li.node__wrapper:nth-of-type(5) .node__wave {
+  clip-path: path(
+    "M 20 41 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 90 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 L 70 956 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 22 -93 A 1 1 0 0 0 20 40 Z"
+  );
+  width: 70px;
+}
+
 li.node__wrapper:nth-of-type(6) {
-  margin-top: 250px;
+  margin-top: 200px;
 }
 
 li.node__wrapper:nth-of-type(6) .sphere__wrapper {
   width: 120px;
   height: 120px;
+}
+
+li.node__wrapper:nth-of-type(6) .node__wave {
+  clip-path: path(
+    "M 20 41 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 90 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 c 0 30 -20 45 -20 75 c 0 30 20 45 20 75 L 105 956 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 20 -75 c 0 -30 -20 -45 -20 -75 c 0 -30 20 -45 22 -93 A 1 1 0 0 0 20 40 Z"
+  );
+  width: 105px;
+}
+
+li.node__wrapper:nth-of-type(7) {
+  rotate: -6deg;
 }
 
 li.node__wrapper:nth-of-type(7) .sphere__wrapper {
@@ -107,8 +153,10 @@ li.node__wrapper:nth-of-type(7) .sphere__wrapper {
 
 .node__title {
   font-family: "Courier New", Courier, monospace;
-  color: black;
+  color: whitesmoke;
   text-decoration: none;
+  position: relative;
+  z-index: 1;
 }
 
 .sphere__gradient {
@@ -141,4 +189,8 @@ li.node__wrapper:nth-of-type(7) .sphere__wrapper {
   border-radius: 50%;
   height: 60px;
   width: 60px;
+  position: relative;
+  left: 20px;
+  bottom: -12px;
+  z-index: 1;
 }
