--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ audio {
 }
 
 body {
-  background-color: #005ab1;
+  /* background-color: #005ab1; */
   /* background-image: url("./assets/cyanotype.webp"); */
   background-repeat: space;
   font-family: "Courier New", Courier, monospace;
@@ -40,17 +40,33 @@ body {
 .content__column {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 }
 
 .content__row {
+  background: #28469d;
+  border-radius: 2em;
+  z-index: -1;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  padding: 1em;
+}
+
+.content__title--full {
+  display: flex;
+  height: 100%;
+  width: 100%;
+}
+
+.content__title--full h2 {
+  width: 100%;
 }
 
 .content__wrapper {
-  padding-left: 1em;
-  padding-right: 1em;
+  display: flex;
+  flex-direction: column;
+  padding: 2em;
 }
 
 #frame__image {
@@ -75,7 +91,7 @@ header {
 }
 
 h1 {
-  font-size: 6em;
+  font-size: xxx-large;
   letter-spacing: 5pt;
   color: #eceaef;
   padding: 5px;
@@ -108,10 +124,11 @@ h2 {
   overflow: hidden;
   border: whitesmoke solid;
   border-radius: 2em;
+  margin: 2em;
 }
 
 .image__wrapper img {
-  max-width: 500px;
+  max-width: 100%;
 }
 
 main {
@@ -119,20 +136,14 @@ main {
   flex-direction: column;
 }
 
-#page-wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
 .text__wrapper {
   border: solid whitesmoke;
   border-radius: 2em;
-  max-width: 40vw;
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   margin: 2em;
+  max-width: 60vw;
+  overflow: hidden;
 }
 
 .text__content {
