--- a/style.css
+++ b/style.css
@@ -216,6 +216,10 @@ main {
     align-items: center;
   }
 
+  .image__wrapper {
+    margin: 1em;
+  }
+
   .text__heading {
     padding: 1em;
   }
