--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ audio {
 }
 
 body {
-  /* background-color: #005ab1; */
+  background-color: #041378;
   /* background-image: url("./assets/cyanotype.webp"); */
   background-repeat: space;
   font-family: "Courier New", Courier, monospace;
@@ -59,8 +59,8 @@ body {
 }
 
 .content__row {
-  /* background: #27307d; */
-  background: url(assets/cyanotype.png);
+  background: #27307d;
+  /* background: url(assets/cyanotype.png); */
   background-size: cover;
   border-radius: 2em;
   flex-wrap: wrap;
@@ -109,13 +109,12 @@ header {
 
 h1 {
   font-size: xxx-large;
-  letter-spacing: 5pt;
+  letter-spacing: 7pt;
   color: #eceaef;
   padding: 5px;
   margin: 5px;
   background: url(assets/cyanotype.png);
   background-size: cover;
-  border-style: solid;
   border-radius: 1em;
   padding: 0.5em;
 }
@@ -128,7 +127,6 @@ h1 a {
 h2 {
   color: whitesmoke;
   padding: 0.5em;
-  border-style: solid;
   border-radius: 1em;
   letter-spacing: 0.3em;
   background: url(assets/cyanotype.png);
