--- a/nav.css
+++ b/nav.css
@@ -227,6 +227,7 @@ li.node__wrapper:nth-of-type(7) .sphere__wrapper {
     flex-direction: column;
     overflow: visible;
     padding-top: 1em;
+    width: 80vw;
   }
 
   .node__wave {
