--- a/flowers.css
+++ b/flowers.css
@@ -44,7 +44,8 @@
   display: flex;
   flex-direction: column;
   background: whitesmoke;
-  max-width: 60vw;
+  margin-bottom: 2em;
+  max-width: 40vw;
   justify-content: center;
   justify-self: center;
   align-self: center;
