change font to use subset

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Janger;
-  src: url("JangerRegular-lgYWq.otf");
+  src: url("JangerRegular-lgYWq-subset.otf");
 }
 
 audio {
