--- a/style.css
+++ b/style.css
@@ -227,7 +227,12 @@ main {
   background-color: rgb(245, 245, 245);
 }
 
+.text__content li {
+  padding-top: 1em;
+}
+
 .text__content--signature {
+  margin-top: 2em;
   padding-top: 1em;
   border-top: dotted;
 }
